--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,6 +1,8 @@
 name: Django CI
 
 on:
+  workflow_call:
+  workflow_dispatch:
   push:
     branches: [ "main" ]
   pull_request:
@@ -26,5 +28,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
+      env:
+        DJANGO_ALLOWED_HOSTS: django.rbashish.tech
+        DEBUG_MODE: True
       run: |
         python manage.py test
